--- a/app/src/main/res/xml/stock_settings.xml
+++ b/app/src/main/res/xml/stock_settings.xml
@@ -43,6 +43,9 @@
             app:title="@string/expiration_date" />
         <ListPreference
             app:key="expiration_reminder"
-            app:title="@string/expiration_reminder" />
+            app:title="@string/expiration_reminder"
+            app:entries="@array/expiration_reminder"
+            app:entryValues="@array/values_0_to_5"
+            app:useSimpleSummaryProvider="true"/>
     </PreferenceCategory>
 </androidx.preference.PreferenceScreen>
