--- a/app/src/main/res/xml/advanced_reminder_settings_stock.xml
+++ b/app/src/main/res/xml/advanced_reminder_settings_stock.xml
@@ -18,5 +18,10 @@
     <EditTextPreference
         app:key="expiration_days_before"
         app:title="@string/remind_days_before_expiration" />
+    <PreferenceCategory app:title="@string/medicine_stock">
+        <Preference app:key="medicine_stock" app:title="@string/amount" app:selectable="false"/>
+        <Preference app:key="medicine_expiration_date" app:title="@string/expiration_date" app:selectable="false"/>
+        <Preference app:key="edit_medicine_stock_settings" app:title="@string/edit_medicine_stock_settings" app:icon="@drawable/box_seam"/>
+    </PreferenceCategory>
 
 </androidx.preference.PreferenceScreen>
