--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -61,7 +61,7 @@
             app:destination="@id/stockSettingsFragment" />
         <action
             android:id="@+id/action_editMedicineFragment_to_advancedReminderPreferencesStockExpirationFragment"
-            app:destination="@id/advancedReminderPreferencesStockExpirationFragment" />
+            app:destination="@id/advancedReminderPreferencesStockFragment" />
     </fragment>
     <argument
         android:name="reminderId"
@@ -159,17 +159,20 @@
     <fragment
         android:id="@+id/stockSettingsFragment"
         android:name="com.futsch1.medtimer.medicine.stockSettings.StockSettingsFragment"
-        android:label="@string/medicine_stock">
+        android:label="@string/medicine_stock_settings">
         <argument
             android:name="medicineId"
             app:argType="integer" />
     </fragment>
     <fragment
-        android:id="@+id/advancedReminderPreferencesStockExpirationFragment"
+        android:id="@+id/advancedReminderPreferencesStockFragment"
         android:name="com.futsch1.medtimer.medicine.advancedReminderPreferences.AdvancedReminderPreferencesStockFragment"
         android:label="@string/advanced_settings">
         <argument
             android:name="reminderId"
             app:argType="integer" />
+        <action
+            android:id="@+id/action_advancedReminderPreferencesStockExpirationFragment_to_stockSettingsFragment"
+            app:destination="@id/stockSettingsFragment" />
     </fragment>
 </navigation>
