--- a/app/src/main/res/layout/overview_item.xml
+++ b/app/src/main/res/layout/overview_item.xml
@@ -86,7 +86,8 @@
             app:layout_constraintEnd_toStartOf="@id/reminderIcon"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toEndOf="@id/reminderTypeIcon"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth="match_constraint" />
 
         <ImageView
             android:id="@+id/reminderIcon"
