Fix edit event for stock events

--- a/app/src/main/res/layout/sidesheet_edit_event.xml
+++ b/app/src/main/res/layout/sidesheet_edit_event.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
-        android:hint="@string/event_name">
+        android:hint="@string/medicine_name">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editEventName"
@@ -33,6 +33,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/editEventAmountLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
