Fix update of widgets in SDK < 31 Fix name of widget

--- a/app/src/main/res/layout/widget_four_lines.xml
+++ b/app/src/main/res/layout/widget_four_lines.xml
@@ -4,50 +4,58 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/widgetLine1"
+    <TextView
+        android:id="@+id/widgetLine1Text"
         style="@style/Widget.MedTimer.InnerView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:maxLines="1"
+        android:orientation="horizontal"
+        android:textColor="?attr/colorOnPrimary" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="4dp"
         tools:ignore="UselessLeaf" />
 
-    <LinearLayout
-        android:id="@+id/widgetLine2"
+    <TextView
+        android:id="@+id/widgetLine2Text"
         style="@style/Widget.MedTimer.InnerView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:maxLines="1"
+        android:orientation="horizontal"
+        android:textColor="?attr/colorOnPrimary" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="4dp"
         tools:ignore="UselessLeaf" />
 
-    <LinearLayout
-        android:id="@+id/widgetLine3"
+    <TextView
+        android:id="@+id/widgetLine3Text"
         style="@style/Widget.MedTimer.InnerView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:maxLines="1"
+        android:orientation="horizontal"
+        android:textColor="?attr/colorOnPrimary" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="4dp"
         tools:ignore="UselessLeaf" />
 
-    <LinearLayout
-        android:id="@+id/widgetLine4"
+    <TextView
+        android:id="@+id/widgetLine4Text"
         style="@style/Widget.MedTimer.InnerView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:maxLines="1"
+        android:orientation="horizontal"
+        android:textColor="?attr/colorOnPrimary" />
 </LinearLayout>
