--- a/app/src/main/res/layout/widget_one_line.xml
+++ b/app/src/main/res/layout/widget_one_line.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -11,5 +12,6 @@
         android:layout_gravity="center_vertical"
         android:maxLines="1"
         android:orientation="horizontal"
-        android:textColor="?attr/colorOnPrimary" />
+        android:textColor="?attr/colorOnPrimary"
+        tools:ignore="InconsistentLayout" />
 </LinearLayout>
