--- a/app/src/main/res/menu/advanced_reminder_settings.xml
+++ b/app/src/main/res/menu/advanced_reminder_settings.xml
@@ -1,5 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/duplicate"
+        android:icon="@drawable/copy"
+        android:title="@string/duplicate" />
+    <item
         android:id="@+id/delete_reminder"
         android:icon="@drawable/trash"
         android:title="@string/delete" />
