Finish implementation of duplicating medicines

--- a/app/src/main/res/menu/edit_medicine_settings.xml
+++ b/app/src/main/res/menu/edit_medicine_settings.xml
@@ -12,6 +12,10 @@
             android:id="@+id/duplicate"
             android:title="@string/duplicate"
             android:icon="@drawable/copy"/>
+        <item
+            android:id="@+id/duplicate_including_reminders"
+            android:title="@string/duplicate_including_reminders"
+            android:icon="@drawable/copy"/>
     </group>
     <group>
         <item
